hphp/hack/test/typecheck/array/disallow_read_from_append.php.exp
File "disallow_read_from_append.php", line 6, characters 8-9:
Cannot use [] for reading (NastCheck[3047])
